<resources>
    <string name="app_name">Let\'s (m)eat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_title">Név</string>
    <string name="other_aspect">Egyéb</string>
    <string name="restaurant_address">Cím</string>
    <string name="restaurant_phone">+36 (30) 1234 567</string>
    <string name="restaurant_uri">https://ettermem.hu</string>
    <string name="save">Mentés</string>
    <string name="email_address">Email cím</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="no_account">Még nem vagy tag? Irány a regisztráció!</string>
    <string name="tag">Megéheztetek, de nem tudjátok hova menjetek? Lépj be és máris lesz ötleted!</string>
    <string name="signup">Regisztráció</string>
    <string name="newcomer_text">Még nem vagy tag? Csatlakozz és eléd tárul a vélemények világa!</string>
    <string name="name">Név</string>
    <string name="password_again">Ismételt jelszó</string>
    <string name="register">Regisztráció</string>
    <string name="go_to_reviews_btn">Irány a vélemények!</string>
    <string name="go_to_website">Lecsekkolom a weboldalukat</string>
    <string name="logout">Kilépés</string>
    <string name="savouriness">Ízletesség</string>
    <string name="prices">Árak</string>
    <string name="service">Kiszolgálás</string>
    <string name="cleanness">Tisztaság</string>
    <string name="how_satisfied">Mennyire voltál megelégedve?</string>
    <string name="review_other_aspect_txt">Egyéb mondanivalód van? Jöhet!</string>

    <string-array name="food_types">
        <item>Magyar</item>
        <item>Olasz</item>
        <item>Ázsiai</item>
        <item>Amerikai</item>
        <item>Egyéb</item>
    </string-array>
</resources>